SSG-8094: display and log the output of patch installs
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@41946 219f1c6e-4a0e-43c8-96f2-6e749be13fd4